--- a/ExtensionManagerKernel/ExtensionManager.Kernel.csproj
+++ b/ExtensionManagerKernel/ExtensionManager.Kernel.csproj
@@ -1,15 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>WinExe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ExtensionManagerKernel\ExtensionManager.Kernel.csproj" />
+    <PackageReference Include="ImGui.SdlCs" Version="1.1.2" />
+    <PackageReference Include="NativeFileDialogSharp" Version="0.6.0-alpha" />
   </ItemGroup>
 
 </Project>
