--- a/ExtensionManager/Loader/ExtensionManager.csproj
+++ b/ExtensionManager/Loader/ExtensionManager.csproj
@@ -9,7 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ExtensionManagerKernel\ExtensionManager.Kernel.csproj" />
+    <ProjectReference Include="..\Kernel\ExtensionManager.Kernel.csproj" />
   </ItemGroup>
 
 </Project>
