--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@
 /ExtensionManager/Loader/obj
 /ExtensionManager/.vs
 /ExtensionManager/Output
+/ExtensionManager/Assoc/bin
+/ExtensionManager/Assoc/obj
+/ExtensionManager/zpixFont/obj
+/ExtensionManager/zpixFont/bin
