--- a/ExtensionManager/Kernel/ExtensionManager.Kernel.csproj
+++ b/ExtensionManager/Kernel/ExtensionManager.Kernel.csproj
@@ -4,11 +4,17 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="ImGui.SdlCs" Version="1.1.2" />
     <PackageReference Include="NativeFileDialogSharp" Version="0.6.0-alpha" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Assoc\ExtensionManager.Assoc.csproj" />
+    <ProjectReference Include="..\zpixFont\zpixFont.csproj" />
   </ItemGroup>
 
 </Project>
